mesas sem posição
